cherry pick fix from http://bugs.python.org/issue20901
Signed-off-by: Islam Amer <islam.amer@jollamobile.com>

--- a/python.yaml
+++ b/python.yaml
@@ -11,6 +11,7 @@ Patches:
     - cgi-py-shebang.patch
     - Python-2.2.1-pydocnogui.patch
     - notimestamp.patch
+    - fix-test-sqlite.patch
 Description: |
     Python is an interpreted, interactive, object-oriented programming
     language often compared to Tcl, Perl, Scheme or Java. Python includes
